--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -20,5 +20,5 @@ target_include_directories(${target} PRIVATE src/)
 
 target_link_libraries(${target} ev)
 
-set_target_properties(${target} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
+set_target_properties(${target} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/out/${CMAKE_BUILD_TYPE}/)
 
